# learnopengl

./: .claudiaideconfig  .gitignore  CMakeLists.txt  README.md  glm_main_chap8.cpp  glm_multiple_cube_example.cpp  shader.vs  shader_main.cpp  texture_main.cpp
Chapter_1_to_11/: camera_mouse_zoom.cpp
Chapter_1_to_11/my/: glm_main_chap8.cpp  glm_multiple_cube_example.cpp
Chapters/Chapter_1_to_11/: shader.fs
Chapters/Chapter_1_to_11/my/Archive/: shader_main.cpp  texture_main.cpp
Chapters/Lighting_Chap_12_to_18/: lighting_main.cpp
chapters/Chapter_1_to_11/my/: glm_main_chap8_to_10.cpp
chapters/Lighting_Chap_12_to_18/: lighting_main.cpp
chapters/Lighting_Chap_12_to_18/shaders_before_multiple_lights/: shader.vs
chapters/Lighting_Chap_12_to_18/shaders_final/: shader.fs
chapters/Misc/: vertices.txt
chapters/advanced_lighting/: blinn_phong.cpp
chapters/advanced_opengl/: advanced_anti_aliasing.cpp  advanced_anti_aliasing_offscreen.cpp  advanced_asteroid_without_instancing.cpp  advanced_blending.cpp  advanced_cubemaps.cpp  advanced_depth_testing.cpp  advanced_framebuffer.cpp  advanced_geometry_shader.cpp  advanced_instancing.cpp  advanced_stencil_testing.cpp
chapters/advanced_opengl/debugging/: framebuffer_output.frag
chapters/advanced_opengl/shaders_blending/: blending_model.vert
chapters/advanced_opengl/shaders_cubemap/: cubemap_object.frag
chapters/advanced_opengl/shaders_framebuffer/: framebuffer_screen.frag
chapters/advanced_opengl/shaders_geometry_shader/: geometry.geom  geometry.vert  show_normal.geom
chapters/advanced_opengl/shaders_instancing/: object.vert
include/LearnOpenGL/: FileSystem.h  mesh.h  model.h  shader_m.h  shader_s.h  stb_image.h
include/assimp/: Base64.hpp  BaseImporter.h  Bitmap.h  BlobIOSystem.h  ByteSwapper.h  CreateAnimMesh.h  DefaultIOStream.h  DefaultIOSystem.h  DefaultLogger.hpp  Exceptional.h  Exporter.hpp  GenericProperty.h  Hash.h  IOStream.hpp  IOStreamBuffer.h  IOSystem.hpp  Importer.hpp  LineSplitter.h  LogAux.h  LogStream.hpp  Logger.hpp  MathFunctions.h  MemoryIOWrapper.h  NullLogger.hpp  ParsingUtils.h  Profiler.h  ProgressHandler.hpp  RemoveComments.h  SGSpatialSort.h  SceneCombiner.h  SkeletonMeshBuilder.h  SmallVector.h  SmoothingGroups.h  SmoothingGroups.inl  SpatialSort.h  StandardShapes.h  StreamReader.h  StreamWriter.h  StringComparison.h  StringUtils.h  (+39 more)
include/assimp/Compiler/: poppack1.h  pushpack1.h
include/glad/: glad.h
include/imgui-1.89/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
include/imgui-1.89/backends/: imgui_impl_allegro5.cpp  imgui_impl_android.cpp  imgui_impl_dx12.cpp  imgui_impl_dx9.cpp  imgui_impl_glfw.cpp  imgui_impl_glut.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_sdl.cpp  imgui_impl_sdlrenderer.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_impl_wgpu.cpp  imgui_impl_wgpu.h  imgui_impl_win32.cpp
include/imgui-1.89/docs/: FAQ.md
include/imgui-1.89/misc/freetype/: imgui_freetype.cpp  imgui_freetype.h
notes/: Advanced_GLSL_Notes.md  Cubemap_Notes.md  Face_Culling_Notes.md  Framebuffer_Notes.md  Instancing.md  Stencil_Testing_Notes.md
resources/: tea_set_01_1k.mtl  treasure_chest_1k.mtl
src/: glad.c
src/shaders/: depth_testing_shader.frag  lightsource_shader.vs  shader.fs  shader.vs
test/: test_phong.cpp
